# django-movie-reviews

./: README.md  pyproject.toml
movie_reviews/movie_reviews/: settings.py  urls.py
movie_reviews/reviews/: admin.py  forms.py  models.py  urls.py  views.py
movie_reviews/reviews/migrations/: 0001_initial.py  0002_remove_collections_movie_remove_movie_bookmarked_by_and_more.py  0003_alter_collections_bookmarks.py  0004_alter_collections_bookmarks.py  0005_movie_img_src.py  0006_alter_collections_bookmarks.py  0007_remove_collections_bookmarks_movie_folders.py  0008_alter_collections_unique_together.py  0009_alter_movie_folders.py  0010_bookmark_alter_movie_folders_bookmark_movie.py
movie_reviews/static/reviews/: folder.js  movie-reviews.js  reviews.css
movie_reviews/templates/registration/: logged_out.html  login.html  signup.html
movie_reviews/templates/reviews/: add_bookmark.html  add_to_collections.html  base.html  bookmarks.html  collections_form.html  index.html  movie_list.html
